--- a/index.html
+++ b/index.html
@@ -61,5 +61,5 @@ body { overflow: hidden }
     </div>
 </body>
 <script src="index.js"></script>
-<script src="dist/w.js"></script>
+<script src="dist/W.js"></script>
 </html>
