--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.rawgit.com/jquery/jquery/2.1.4/dist/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/Automattic/expect.js/0.3.1/index.js"></script>
     <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
-    <script src="dist/w.js"></script>
+    <script src="dist/W.js"></script>
 
     <script>mocha.setup('bdd')</script>
     <script src="test/all.js"></script>
